2008-08-04  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (SRC-POTFILES.in, BLD-POTFILES.in): Set LC_ALL=C.
	* Makefile.in: Regenerate.
	* po/SRC-POTFILES.in: Regenerate.

2008-08-02  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (mark_overlay_section): Move code calculating
	max_overlay_size to correct block.
	(spu_elf_auto_overlay): Don't use %x in einfo error message.

2008-08-01  Alan Modra  <amodra@bigpond.net.au>
	    Jan Kratochvil  <jan.kratochvil@redhat.com>

	* elfcore.h (elf_core_file_p): Ensure we have a backend match
	with the correct arch size before rejecting the generic fallback.
	* elfcode.h (elf_object_p): Likewise.  Ensure arch size matches
	before accepting a target.

2008-08-01  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (rewrite_elf_program_header): Don't wrap p_paddr to
	include file or program headers.

2008-07-30  Alan Modra  <amodra@bigpond.net.au>

	* coff-ppc.c, coffgen.c, ecoff.c, ecofflink.c, elf.c, elf32-frv.c,
	elf32-iq2000.c, elf32-m32c.c, elf32-mep.c, elf32-mt.c,
	elf32-sh-symbian.c, elf64-hppa.c, mach-o.c, peXXigen.c, pef.c,
	ppcboot.c, vms-misc.c, xsym.c: Silence gcc warnings.

2008-07-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfxx-mips.c (mips_elf_calculate_relocation): Avoid generating
	relocations for undefined weak symbols with non-default visibility.
	(_bfd_mips_elf_check_relocs): Use possibly_dynamic_relocs for
	global symbols in shared libraries.
	(allocate_dynrelocs): New function.
	(_bfd_mips_elf_adjust_dynamic_symbol): Do not handle
	possibly_dynamic_relocs here.
	(_bfd_mips_elf_size_dynamic_sections): Call allocate_dynrelocs.

2008-07-28  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-i386.c (struct elf_i386_link_hash_table): Added field
	tls_module_base.
	(elf_i386_link_hash_table_create): Initialize it.
	(elf_i386_always_size_sections): Set it.
	(set_tls_module_base): New.
	(elf_i386_relocate_sections): Call it.
	* elf64-x86-64.c (struct elf64_x86_64_link_hash_table): Added